--- a/apps/mobile/src/utils/translations/vn.json
+++ b/apps/mobile/src/utils/translations/vn.json
@@ -18,7 +18,7 @@
       "shareButton": "Chia sẻ với bạn bè"
     },
     "earnPoints": {
-      "title": "Congratulation",
+      "title": "Congratulations",
       "messagePrefix": "Điểm thưởng đã được cộng!",
       "messageSuffix": "points",
       "completedOnboardingMessage": "Your account is ready to use. You will be redirected to the Home Page in a few seconds."
@@ -104,9 +104,13 @@
       },
       "tripSummary": {
         "title": "Tiến độ hôm nay",
+		"infoTitle": {
+			"distance": "Travel distance",
+			"time": "Travel time"
+		},
         "infoUnit": {
-          "km": "km",
-          "time": "Thời gian",
+          "distance": "km",
+          "time": "phút",
           "avgSpeed": "Tốc độ (km/h)"
         }
       },
