--- a/apps/mobile/src/utils/translations/kr.json
+++ b/apps/mobile/src/utils/translations/kr.json
@@ -18,7 +18,7 @@
       "shareButton": "친구에게 공유하기"
     },
     "earnPoints": {
-      "title": "Congratulation",
+      "title": "Congratulations",
       "messagePrefix": "포인트가 누적되었습니다",
       "messageSuffix": "포인트를",
       "completedOnboardingMessage": "계정을 사용할 준비가 되었습니다. 몇 초 안에 홈 페이지로 전환됩니다."
