chore: update trip result translation content

--- a/apps/mobile/src/utils/translations/en.json
+++ b/apps/mobile/src/utils/translations/en.json
@@ -142,6 +142,22 @@
         "avgSpeed": "Avg Speed (km/h)"
       }
     },
+    "tripResult": {
+      "pointsTitle": "You have earned",
+      "infoTitles": {
+        "distance": "Distance",
+        "duration": "Duration",
+        "avgSpeed": "Average Speed"
+      },
+      "infoUnits": {
+        "km": "km",
+        "time": "time",
+        "speed": "km/h"
+      },
+      "claim": "Claim {{points}} GO points",
+      "startNewTrip": "Start new trip",
+      "backToHome": "Back to home"
+    },
     "map": {
       "tripUnit": {
         "distance": "Distance (km)",
