--- a/apps/mobile/src/utils/translations/kr.json
+++ b/apps/mobile/src/utils/translations/kr.json
@@ -13,28 +13,28 @@
       "title": "친구 초대 하기!",
       "description": "친구를 초대하고 보상을 받으려면 복사 또는 공유 버튼을 클릭하세요",
       "referral": "초대",
-      "message": "AiGO 앱을 다운로드하세요 {{{url}}}\n자신의 초대 코드를 사용하고 {{points}} GO 포인트를 받으세요: {{code}}",
+      "message": "AiGO Ride 앱을 다운로드하세요 {{{url}}}\n자신의 초대 코드를 사용하고 {{points}} GO 포인트를 받으세요: {{code}}",
       "codeTitle": "초대 코드",
       "shareButton": "친구에게 공유하기"
     },
     "earnPoints": {
-      "title": "Congratulations",
+      "title": "축하드립니다",
       "messagePrefix": "포인트가 누적되었습니다",
       "messageSuffix": "포인트를",
       "completedOnboardingMessage": "계정을 사용할 준비가 되었습니다. 몇 초 안에 홈 페이지로 전환됩니다."
     },
     "citySelection": {
-      "title": "Country Code",
-      "placeholder": "Search Countries",
-      "cancelButton": "Cancel"
+      "title": "국가번호",
+      "placeholder": "국가 검색하기",
+      "cancelButton": "취소"
     },
     "startTripBottomSheet": {
-      "title": "Just take you a second ...",
-      "userTypeTitle": "You are",
-      "userTypes": ["Driver", "Rider"],
-      "purposeTitle": "Your purpose is",
-      "purposes": ["Go to work", "Hang out"],
-      "startButton": "Start"
+      "title": "잠시만 기다려주세요 ...",
+      "userTypeTitle": "당신은",
+      "userTypes": ["드라이버", "라이더"],
+      "purposeTitle": "이동 목적은",
+      "purposes": ["출퇴근", "활동"],
+      "startButton": "시작하기"
     }
   },
   "screens": {
@@ -103,14 +103,14 @@
         "joinTelegramButton": "텔레그램 입장"
       },
       "tripSummary": {
-        "title": "Today's travel log",
+        "title": "오늘의 여행 기록",
 		"infoTitle": {
-			"distance": "Travel distance",
-			"time": "Travel time"
+			"distance": "이동 거리",
+			"time": "이동 시간"
 		},
         "infoUnit": {
           "distance": "km",
-          "time": "minutes",
+          "time": "분",
           "avgSpeed": "Avg Speed (km/h)"
         }
       },
@@ -125,51 +125,52 @@
       "dailyCheckInSection": {
         "title": "출석 체크",
         "checkInButton": "출석하기",
-        "checkInDay": "Day"
+        "checkInDay": "Day",
+		"today": "오늘"
       },
       "dailyMissionSection": {
         "title": "일일 미션"
       },
-      "mainButton": "Start your trip now"
+      "mainButton": "주행을 시작하세요"
     },
     "tripHistory": {
-      "title": "Trip History",
-      "loadingLocation": "Loading location",
-      "unknownLocation": "Unknown location",
+      "title": "주행 기록",
+      "loadingLocation": "위치 조회 중",
+      "unknownLocation": "알 수 없는 위치",
       "infoUnit": {
-        "km": "km",
-        "time": "Time",
-        "avgSpeed": "Avg Speed (km/h)"
+        "km": "거리",
+        "time": "이동 시간",
+        "avgSpeed": "평균 속도"
       }
     },
     "tripResult": {
-      "pointsTitle": "You have earned",
+      "pointsTitle": "획득한 GO 포인트",
       "infoTitles": {
-        "distance": "Distance",
-        "duration": "Duration",
-        "avgSpeed": "Average Speed"
+        "distance": "거리",
+        "duration": "이동 시간",
+        "avgSpeed": "평균 속도"
       },
       "infoUnits": {
         "km": "km",
         "time": "time",
         "speed": "km/h"
       },
-      "claim": "Claim {{points}} GO points",
-      "startNewTrip": "Start new trip",
-      "backToHome": "Back to home"
+      "claim": "{{points}} GO 포인트를 성공적으로 획득하셨습니다",
+      "startNewTrip": "새로운 주행 시작하기",
+      "backToHome": "홈 화면 바로가기"
     },
     "map": {
       "tripUnit": {
-        "distance": "Distance (km)",
-        "time": "Time",
-        "speed": "Speed (km/h)"
+        "distance": "거리",
+        "time": "이동 시간",
+        "speed": "속도"
       },
-      "startButton": "START",
-      "endButton": "END",
+      "startButton": "시작하기",
+      "endButton": "종료하기",
       "confirmEnd": {
-        "title": "Are you sure to end this trip?",
-        "confirm": "Confirm",
-        "cancel": "Close"
+        "title": "목적지에 도착하셨나요?",
+        "confirm": "네",
+        "cancel": "취소하기"
       }
     },
     "profile": {
