chore: update translation (cont)

--- a/apps/mobile/src/utils/translations/vn.json
+++ b/apps/mobile/src/utils/translations/vn.json
@@ -20,7 +20,7 @@
     "earnPoints": {
       "title": "Tuyệt vời",
       "messagePrefix": "Bạn đã nhận được",
-      "messageSuffix": "points",
+      "messageSuffix": "",
       "completedOnboardingMessage": "Your account is ready to use. You will be redirected to the Home Page in a few seconds."
     },
     "citySelection": {
