--- a/apps/mobile/src/utils/translations/vn.json
+++ b/apps/mobile/src/utils/translations/vn.json
@@ -158,9 +158,9 @@
       "claim": "Bạn đã nhận được {{points}} điểm GO",
       "startNewTrip": "Bắt đầu chuyến đi mới",
       "backToHome": "Quay lại trang chủ",
-      "sorryTitle": "We’re sorry",
-      "sorryMessage": "You have no points yet. It would be best if you got enough distance to earn points.",
-      "tryAgain": "Let’s try again"
+      "sorryTitle": "Rất tiếc",
+      "sorryMessage": "Hình như bạn chưa đi đủ quãng đường để nhận điểm",
+      "tryAgain": "Bắt đầu lại chuyến đi"
     },
     "map": {
       "tripUnit": {
