--- a/apps/mobile/src/utils/translations/kr.json
+++ b/apps/mobile/src/utils/translations/kr.json
@@ -247,6 +247,17 @@
         "updateAccountError": "계정 업데이트에 실패했습니다",
         "updateVerificationError": "인증 업데이트에 실패했습니다"
       }
+    },
+    "reward": {
+      "screenTitle": "AiGO Reward",
+      "rewardTab": {
+        "balance": "Balance",
+        "myReward": "My rewards",
+        "redeemed": "Redeemed"
+      },
+      "hotRewards": {
+        "title": "Hot rewards"
+      }
     }
   }
 }
