--- a/apps/mobile/src/utils/translations/kr.json
+++ b/apps/mobile/src/utils/translations/kr.json
@@ -19,8 +19,8 @@
     },
     "earnPoints": {
       "title": "축하드립니다",
-      "messagePrefix": "포인트가 누적되었습니다",
-      "messageSuffix": "포인트를",
+      "messagePrefix": "",
+      "messageSuffix": "포인트가 누적되었습니다",
       "completedOnboardingMessage": "계정을 사용할 준비가 되었습니다. 몇 초 안에 홈 페이지로 전환됩니다."
     },
     "citySelection": {
